--- a/OrderManagementSystem.Api/appsettings.json
+++ b/OrderManagementSystem.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=OrderManagementSystem;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
