Add registration endpoint.

--- a/OrderManagementSystem.Api/appsettings.json
+++ b/OrderManagementSystem.Api/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "l5Ksr029RHhrq0wCd5CDHxI4C9gSapaRpTNTnYJ6wYk=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInMinutes": 60
+  }
 }
