--- a/OrderManagementSystem.Core/OrderManagementSystem.Core.csproj
+++ b/OrderManagementSystem.Core/OrderManagementSystem.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderManagementSystem.Api\OrderManagementSystem.Api.csproj" />
+  </ItemGroup>
+
 </Project>
