--- a/OrderManagementSystem.Api/OrderManagementSystem.Api.csproj
+++ b/OrderManagementSystem.Api/OrderManagementSystem.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrderManagementSystem.Core\OrderManagementSystem.Core.csproj" />
     <ProjectReference Include="..\OrderManagementSystem.EF\OrderManagementSystem.EF.csproj" />
   </ItemGroup>
 
